[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybervault"
version = "1.0.0"
description = "A secure encrypted notes vault with cyberpunk-themed GUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Layzee"}
]
keywords = ["encryption", "security", "password-manager", "notes", "vault", "cyberpunk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "cryptography>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cybervault"
Repository = "https://github.com/yourusername/cybervault"
Issues = "https://github.com/yourusername/cybervault/issues"

[project.scripts]
vaultui = "cybervault.gui:main"
vault = "cybervault.vault:main"

[tool.setuptools.packages.find]
include = ["cybervault*"] 